--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,12 +8,17 @@
   <div class="ui dropdown item">
     Account <i class="dropdown icon"></i>
     <div class="menu">
-      <a class="item">Log Out</a>
-      <a class="item">Log In</a>
+      <% if logged_in? %>
+      <%= link_to "Log out", logout_path, method: :delete, class: "item" %>
+      <% else %>
+      <%= link_to "Log in", login_path, class: "item" %>
       <a class="item">Sign Up</a>
+      <% end %>
     </div>
   </div>
+  <% if !logged_in? %>
   <div class="item">
-      <div class="ui primary button">Sign Up</div>
+    <%= link_to "Log in", login_path, class: "ui primary button" %>
   </div>
+  <% end %>
 </div>
